welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		case(x,y) if((x>60 && x<81 && y==false) || (x>65 && x<86 && y=true)) => return 1
                                                                         ^