welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = 
{
	(speed,isBirthday) match
	{
		case(x,y) if((x<60 && y==false) || (x<65 &&y==true)) => return 0
		case(x,y) if((x>60 && x<81 && y==false) || (x>65 && x<86 && y=true)) => return 1
		case(x,y) if((x>81 && y==false ) || (x>86 && y==true) ) => return 2
		
	}
}
